fix: fix the min-height of the main-content being too short

--- a/src/assets/scss/components/_main-content.scss
+++ b/src/assets/scss/components/_main-content.scss
@@ -2,28 +2,16 @@
 
 .main-content {
   width: 100%;
-  min-height: calc(
-    100vh -
-      (
-        var.$large-footer-height + var.$large-header-height + var.$large-main-content-top-margin +
-          var.$large-main-content-bottom-margin
-      )
-  );
+  min-height: calc(100vh - var.$large-footer-height);
   margin: 0;
-  padding: (var.$large-header-height + var.$large-main-content-top-margin)
-    var.$main-content-right-and-left-padding var.$large-main-content-bottom-margin
+  padding: (var.$large-header-height + var.$large-main-content-top-padding)
+    var.$main-content-right-and-left-padding var.$large-main-content-bottom-padding
     var.$main-content-right-and-left-padding;
 
   @media (max-width: var.$mobile-device-max-width) {
-    min-height: calc(
-      100vh -
-        (
-          var.$small-footer-height + var.$small-header-height + var.$small-main-content-top-margin +
-            var.$small-main-content-bottom-margin
-        )
-    );
-    padding: (var.$small-header-height + var.$small-main-content-top-margin)
-      var.$main-content-right-and-left-padding var.$small-main-content-bottom-margin
+    min-height: calc(100vh - var.$small-footer-height);
+    padding: (var.$small-header-height + var.$small-main-content-top-padding)
+      var.$main-content-right-and-left-padding var.$small-main-content-bottom-padding
       var.$main-content-right-and-left-padding;
   }
 }
